--- a/TestNG-Demo/test-output/old/Suite/classes.html
+++ b/TestNG-Demo/test-output/old/Suite/classes.html
@@ -29,6 +29,10 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>dosomething</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
@@ -46,13 +50,12 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>personalloanLoginMobile</td>
+<td>personalloanLoginWeb</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>personalloanLoginWeb</td>
-<td>Smoke </td>
-</tr>
+<td>personalloanLoginMobile</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -78,8 +81,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>carloanLoginMobile</td>
-<td>Smoke </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>carloanLoginAPI</td>
