--- a/TestNG-Demo/test-output/old/Suite/groups.html
+++ b/TestNG-Demo/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>CarLoanApplicationTests.carloanLoginMobile()[pri:0, instance:LoanApplications.CarLoanApplicationTests@272ed83b]<br/>PersonalLoanApplicationTests.personalloanLoginWeb()[pri:0, instance:LoanApplications.PersonalLoanApplicationTests@3972a855]<br/>HomeLoanApplicationTests.APIHomeLoan()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@a3d8174]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>HomeLoanApplicationTests.APIHomeLoan()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]<br/></td></tr>
 </table>
