--- a/TestNG-Demo/test-output/old/Suite/methods-alphabetical.html
+++ b/TestNG-Demo/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cf94f8">  <td>22/09/27 12:53:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeLoanApplicationTests.APIHomeLoan()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@a3d8174]">APIHomeLoan</td> 
-  <td>main@688005825</td>   <td></td> </tr>
-<tr bgcolor="9f66ed">  <td>22/09/27 12:53:55</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarLoanApplicationTests.carloanLoginMobile()[pri:0, instance:LoanApplications.CarLoanApplicationTests@272ed83b]">carloanLoginMobile</td> 
-  <td>main@688005825</td>   <td></td> </tr>
-<tr bgcolor="82b2fa">  <td>22/09/27 12:53:55</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalLoanApplicationTests.personalloanLoginWeb()[pri:0, instance:LoanApplications.PersonalLoanApplicationTests@3972a855]">personalloanLoginWeb</td> 
-  <td>main@688005825</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>22/09/28 10:35:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeLoanApplicationTests.APIHomeLoan()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]">APIHomeLoan</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>22/09/28 10:35:35</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeLoanApplicationTests.MobileHomeLoan()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]">MobileHomeLoan</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>22/09/28 10:35:35</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeLoanApplicationTests.WebHomeLoan()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]">WebHomeLoan</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="a18c68">  <td>22/09/28 10:35:36</td>   <td>193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarLoanApplicationTests.carloanLoginAPI()[pri:0, instance:LoanApplications.CarLoanApplicationTests@57d7f8ca]">carloanLoginAPI</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="a18c68">  <td>22/09/28 10:35:36</td>   <td>186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarLoanApplicationTests.carloanLoginWeb()[pri:0, instance:LoanApplications.CarLoanApplicationTests@57d7f8ca]">carloanLoginWeb</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>22/09/28 10:35:35</td>   <td>18</td> <td>&nbsp;</td><td title="&lt;&lt;HomeLoanApplicationTests.cleanupTestData()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]">&lt;&lt;cleanupTestData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>22/09/28 10:35:35</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeLoanApplicationTests.dosomething()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]">&gt;&gt;dosomething</td> 
+<td>&nbsp;</td>  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>22/09/28 10:35:35</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeLoanApplicationTests.dosomething()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]">&gt;&gt;dosomething</td> 
+<td>&nbsp;</td>  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>22/09/28 10:35:35</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeLoanApplicationTests.dosomething()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]">&gt;&gt;dosomething</td> 
+<td>&nbsp;</td>  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="fc786e">  <td>22/09/28 10:35:36</td>   <td>203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalLoanApplicationTests.personalloanLoginAPI()[pri:0, instance:LoanApplications.PersonalLoanApplicationTests@4d0f2471]">personalloanLoginAPI</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="fc786e">  <td>22/09/28 10:35:36</td>   <td>205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalLoanApplicationTests.personalloanLoginMobile()[pri:0, instance:LoanApplications.PersonalLoanApplicationTests@4d0f2471]">personalloanLoginMobile</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="fc786e">  <td>22/09/28 10:35:36</td>   <td>209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalLoanApplicationTests.personalloanLoginWeb(java.lang.String)[pri:0, instance:LoanApplications.PersonalLoanApplicationTests@4d0f2471]">personalloanLoginWeb</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>22/09/28 10:35:35</td>   <td>-24</td> <td>&nbsp;</td><td title="&gt;&gt;HomeLoanApplicationTests.setupTestData()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]">&gt;&gt;setupTestData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>22/09/28 10:35:35</td>   <td>-29</td> <td title="&gt;&gt;HomeLoanApplicationTests.startDatabase()[pri:0, instance:LoanApplications.HomeLoanApplicationTests@6631f5ca]">&gt;&gt;startDatabase</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1515638188</td>   <td></td> </tr>
 </table>
