--- a/TestNG-Demo/test-output/old/Suite/methods-not-run.html
+++ b/TestNG-Demo/test-output/old/Suite/methods-not-run.html
@@ -1,8 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>LoanApplications.PersonalLoanApplicationTests.personalloanLoginAPI</td></tr>
-<tr><td>LoanApplications.CarLoanApplicationTests.carloanLoginAPI</td></tr>
-<tr><td>LoanApplications.HomeLoanApplicationTests.WebHomeLoan</td></tr>
-<tr><td>LoanApplications.PersonalLoanApplicationTests.personalloanLoginMobile</td></tr>
-<tr><td>LoanApplications.HomeLoanApplicationTests.MobileHomeLoan</td></tr>
-<tr><td>LoanApplications.CarLoanApplicationTests.carloanLoginWeb</td></tr>
+<tr><td>LoanApplications.CarLoanApplicationTests.carloanLoginMobile</td></tr>
 </table>
