--- a/TestNG-Demo/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestNG-Demo/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78afa0">  <td>22/09/27 10:42:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="sample1.demo()[pri:0, instance:testpkg.sample1@6c779568]">demo</td> 
-  <td>main@2082781203</td>   <td></td> </tr>
+<tr bgcolor="78afa0">  <td>22/09/28 09:33:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarLoanApplicationTests.carloanLoginAPI()[pri:0, instance:LoanApplications.CarLoanApplicationTests@2e1d27ba]">carloanLoginAPI</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="78afa0">  <td>22/09/28 09:33:41</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarLoanApplicationTests.carloanLoginMobile()[pri:0, instance:LoanApplications.CarLoanApplicationTests@2e1d27ba]">carloanLoginMobile</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
+<tr bgcolor="78afa0">  <td>22/09/28 09:33:41</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarLoanApplicationTests.carloanLoginWeb()[pri:0, instance:LoanApplications.CarLoanApplicationTests@2e1d27ba]">carloanLoginWeb</td> 
+  <td>main@1515638188</td>   <td></td> </tr>
 </table>
